[project]
name = "balanceamento-classificacao"
version = "0.1.0"
description = "Ferramenta para balanceamento inteligente de datasets de imagem para classificação."
readme = "README.md"
authors = [
    { name = "victor Medeiros", email = "victormedeiros96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
